# 11labs-robot

./: .env.local.example  .gitignore  CLERK.md  README.md  eslint.config.mjs  middleware.ts  package.json
app/: globals.css  layout.tsx  page.tsx
app/elevenlabs-robotics/: page.tsx
app/pricing/: page.tsx
app/pricing/checkout/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
components/landing/: AvatarSection.tsx  CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx
fastapi-robot-backened/: main.py  pyproject.toml
fastapi-robot-backened/lib/: PCA9685.py
fastapi-robot-backened/lib/alphabotlib/: ws2812.py
memoji-talking/: pnpm-lock.yaml
robot-app/: next.config.ts  package.json  pnpm-lock.yaml
robot-app/app/: page.tsx
robot-app/app/api/robot/camera/detect-character/: route.ts
robot-app/app/api/robot/gesture/[action]/: route.ts
robot-app/app/api/robot/led/[action]/: route.ts
robot-app/app/api/robot/movement/[action]/: route.ts
robot-app/app/api/signed-url/: route.ts
website/: PRD.md  package-lock.json
website/components/landing/: Features.tsx  HowItWorks.tsx
website/components/ui/: Button.tsx  Card.tsx
